http_parser.c

#line 1 "http_parser.rl"
/*
 * Copyright (C) 2012-2013, Eric Wong <normalperson@yhbt.net>
 * License: GPLv3 or later (see COPYING for details)
 */
#include "cmogstored.h"
#include "http_util.h"

static bool length_incr(off_t *len, unsigned c)
{
	off_t prev = *len;

	*len *= 10;
	*len += c - '0';

	if (*len >= prev)
		return true;

	errno = ERANGE;
	*len = -1;

	return false;
}


#line 116 "http_parser.rl"



#line 32 "http_parser.c"
static const int http_parser_start = 1;
static const int http_parser_first_final = 468;
static const int http_parser_error = 0;

static const int http_parser_en_ignored_trailer = 240;
static const int http_parser_en_more_trailers = 249;
static const int http_parser_en_ignored_header = 293;
static const int http_parser_en_more_headers = 302;
static const int http_parser_en_main = 1;


#line 119 "http_parser.rl"

void mog_http_reset_parser(struct mog_http *http)
{
	int cs;
	struct mog_rbuf *rbuf = http->rbuf;
	struct mog_svc *svc = http->svc;

	
#line 53 "http_parser.c"
	{
	cs = http_parser_start;
	}

#line 127 "http_parser.rl"
	memset(http, 0, sizeof(struct mog_http));
	http->cs = cs;
	http->rbuf = rbuf;
	http->svc = svc;
}

void mog_http_init(struct mog_http *http, struct mog_svc *svc)
{
	http->svc = svc;
	http->rbuf = NULL;
	mog_http_reset_parser(http);
}

enum mog_parser_state
mog_http_parse(struct mog_http *http, char *buf, size_t len)
{
	char *p, *pe, *eof = NULL;
	int cs = http->cs;
	int really_done = 0;
	size_t off = http->offset;

	assert(http->wbuf == NULL && "unwritten data in buffer");
	assert(off <= len && "http offset past end of buffer");

	p = buf + off;
	pe = buf + len;

	assert((void *)(pe - p) == (void *)(len - off) &&
	       "pointers aren't same distance");

	errno = 0;
	
#line 91 "http_parser.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 68: goto tr0;
		case 71: goto tr2;
		case 72: goto tr3;
		case 77: goto tr4;
		case 80: goto tr5;
	}
	goto st0;
tr27:
#line 104 "http_parser.rl"
	{
			assert(http->line_end > 0 &&
			       "no previous request/header line");
			assert(buf[http->line_end] == '\n' &&
			       "bad http->line_end");
			p = buf + http->line_end + 1;
			assert(p <= pe && "overflow");
			{goto st293;}
		}
	goto st0;
tr77:
#line 52 "http_parser.rl"
	{ errno = EINVAL; {p++; cs = 0; goto _out;} }
#line 104 "http_parser.rl"
	{
			assert(http->line_end > 0 &&
			       "no previous request/header line");
			assert(buf[http->line_end] == '\n' &&
			       "bad http->line_end");
			p = buf + http->line_end + 1;
			assert(p <= pe && "overflow");
			{goto st293;}
		}
	goto st0;
tr85:
#line 30 "http_common.rl"
	{
				if (!http->has_expect_md5) {
					errno = EINVAL;
					{p++; cs = 0; goto _out;}
				}
			}
#line 104 "http_parser.rl"
	{
			assert(http->line_end > 0 &&
			       "no previous request/header line");
			assert(buf[http->line_end] == '\n' &&
			       "bad http->line_end");
			p = buf + http->line_end + 1;
			assert(p <= pe && "overflow");
			{goto st293;}
		}
	goto st0;
tr123:
#line 85 "http_parser.rl"
	{ errno = EINVAL; {p++; cs = 0; goto _out;} }
#line 104 "http_parser.rl"
	{
			assert(http->line_end > 0 &&
			       "no previous request/header line");
			assert(buf[http->line_end] == '\n' &&
			       "bad http->line_end");
			p = buf + http->line_end + 1;
			assert(p <= pe && "overflow");
			{goto st293;}
		}
	goto st0;
tr202:
#line 59 "http_parser.rl"
	{ errno = EINVAL; {p++; cs = 0; goto _out;} }
#line 104 "http_parser.rl"
	{
			assert(http->line_end > 0 &&
			       "no previous request/header line");
			assert(buf[http->line_end] == '\n' &&
			       "bad http->line_end");
			p = buf + http->line_end + 1;
			assert(p <= pe && "overflow");
			{goto st293;}
		}
	goto st0;
tr205:
#line 65 "http_parser.rl"
	{ errno = EINVAL; {p++; cs = 0; goto _out;} }
#line 104 "http_parser.rl"
	{
			assert(http->line_end > 0 &&
			       "no previous request/header line");
			assert(buf[http->line_end] == '\n' &&
			       "bad http->line_end");
			p = buf + http->line_end + 1;
			assert(p <= pe && "overflow");
			{goto st293;}
		}
	goto st0;
tr268:
#line 40 "http_common.rl"
	{
			if (http->line_end > 0) {
				assert(buf[http->line_end] == '\n'
				       && "bad http->line_end");
				p = buf + http->line_end + 1;
			} else {
				p = buf;
			}
			assert(p <= pe && "overflow");
			{goto st240;}
		}
	goto st0;
tr283:
#line 30 "http_common.rl"
	{
				if (!http->has_expect_md5) {
					errno = EINVAL;
					{p++; cs = 0; goto _out;}
				}
			}
#line 40 "http_common.rl"
	{
			if (http->line_end > 0) {
				assert(buf[http->line_end] == '\n'
				       && "bad http->line_end");
				p = buf + http->line_end + 1;
			} else {
				p = buf;
			}
			assert(p <= pe && "overflow");
			{goto st240;}
		}
	goto st0;
#line 228 "http_parser.c"
st0:
cs = 0;
	goto _out;
tr0:
#line 36 "http_parser.rl"
	{ http->http_method = MOG_HTTP_METHOD_DELETE; }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 240 "http_parser.c"
	if ( (*p) == 69 )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 76 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 69 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 84 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 69 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	switch( (*p) ) {
		case 47: goto tr12;
		case 104: goto st222;
	}
	goto st0;
tr12:
#line 42 "http_parser.rl"
	{ http->path_tip = to_u8(p - buf); }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 296 "http_parser.c"
	switch( (*p) ) {
		case 32: goto tr14;
		case 47: goto tr12;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st186;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st186;
	} else
		goto st186;
	goto st0;
tr14:
#line 44 "http_parser.rl"
	{ http->path_end = to_u8(p - buf); }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 318 "http_parser.c"
	if ( (*p) == 72 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 84 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 84 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 80 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 47 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 49 )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 46 )
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 48: goto st18;
		case 49: goto tr24;
	}
	goto st0;
tr24:
#line 45 "http_parser.rl"
	{ http->persistent = 1; }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 381 "http_parser.c"
	if ( (*p) == 13 )
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 10 )
		goto tr26;
	goto st0;
tr26:
#line 9 "http_common.rl"
	{ http->line_end = to_u16(p - buf); }
	goto st20;
tr138:
#line 9 "http_common.rl"
	{ http->line_end = to_u16(p - buf); }
#line 86 "http_parser.rl"
	{ http->has_range = 1; }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 406 "http_parser.c"
	switch( (*p) ) {
		case 13: goto st21;
		case 67: goto st22;
		case 82: goto st101;
		case 84: goto st119;
		case 99: goto st22;
		case 114: goto st101;
		case 116: goto st119;
	}
	goto tr27;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 10 )
		goto tr32;
	goto st0;
tr32:
#line 113 "http_parser.rl"
	{ really_done = 1; {p++; cs = 468; goto _out;} }
	goto st468;
st468:
	if ( ++p == pe )
		goto _test_eof468;
case 468:
#line 432 "http_parser.c"
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	switch( (*p) ) {
		case 79: goto st23;
		case 111: goto st23;
	}
	goto tr27;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 78: goto st24;
		case 110: goto st24;
	}
	goto tr27;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	switch( (*p) ) {
		case 78: goto st25;
		case 84: goto st51;
		case 110: goto st25;
		case 116: goto st51;
	}
	goto tr27;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	switch( (*p) ) {
		case 69: goto st26;
		case 101: goto st26;
	}
	goto tr27;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 67: goto st27;
		case 99: goto st27;
	}
	goto tr27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 84: goto st28;
		case 116: goto st28;
	}
	goto tr27;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 73: goto st29;
		case 105: goto st29;
	}
	goto tr27;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 79: goto st30;
		case 111: goto st30;
	}
	goto tr27;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 78: goto st31;
		case 110: goto st31;
	}
	goto tr27;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 58 )
		goto st32;
	goto tr27;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	switch( (*p) ) {
		case 9: goto st32;
		case 13: goto st33;
		case 32: goto st32;
		case 67: goto st36;
		case 75: goto st42;
		case 99: goto st36;
		case 107: goto st42;
	}
	goto tr27;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 10 )
		goto tr47;
	goto tr27;
tr47:
#line 9 "http_common.rl"
	{ http->line_end = to_u16(p - buf); }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 553 "http_parser.c"
	switch( (*p) ) {
		case 9: goto st35;
		case 32: goto st35;
	}
	goto tr27;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 9: goto st35;
		case 32: goto st35;
		case 67: goto st36;
		case 75: goto st42;
		case 99: goto st36;
		case 107: goto st42;
	}
	goto tr27;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 76: goto st37;
		case 108: goto st37;
	}
	goto tr27;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 79: goto st38;
		case 111: goto st38;
	}
	goto tr27;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	switch( (*p) ) {
		case 83: goto st39;
		case 115: goto st39;
	}
	goto tr27;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 69: goto tr52;
		case 101: goto tr52;
	}
	goto tr27;
tr52:
#line 94 "http_parser.rl"
	{ http->persistent = 0; }
	goto st40;
tr63:
#line 95 "http_parser.rl"
	{ http->persistent = 1; }
	goto st40;
tr186:
#line 88 "http_parser.rl"
	{ http->chunked = 1; }
	goto st40;
tr209:
#line 67 "http_parser.rl"
	{ http->has_content_range = 1; }
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
#line 628 "http_parser.c"
	switch( (*p) ) {
		case 9: goto st40;
		case 13: goto st41;
		case 32: goto st40;
	}
	goto tr27;
tr187:
#line 88 "http_parser.rl"
	{ http->chunked = 1; }
	goto st41;
tr210:
#line 67 "http_parser.rl"
	{ http->has_content_range = 1; }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 647 "http_parser.c"
	if ( (*p) == 10 )
		goto tr26;
	goto tr27;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 69: goto st43;
		case 101: goto st43;
	}
	goto tr27;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	switch( (*p) ) {
		case 69: goto st44;
		case 101: goto st44;
	}
	goto tr27;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 80: goto st45;
		case 112: goto st45;
	}
	goto tr27;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	if ( (*p) == 45 )
		goto st46;
	goto tr27;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	switch( (*p) ) {
		case 65: goto st47;
		case 97: goto st47;
	}
	goto tr27;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	switch( (*p) ) {
		case 76: goto st48;
		case 108: goto st48;
	}
	goto tr27;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 73: goto st49;
		case 105: goto st49;
	}
	goto tr27;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	switch( (*p) ) {
		case 86: goto st50;
		case 118: goto st50;
	}
	goto tr27;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	switch( (*p) ) {
		case 69: goto tr63;
		case 101: goto tr63;
	}
	goto tr27;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	switch( (*p) ) {
		case 69: goto st52;
		case 101: goto st52;
	}
	goto tr27;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	switch( (*p) ) {
		case 78: goto st53;
		case 110: goto st53;
	}
	goto tr27;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	switch( (*p) ) {
		case 84: goto st54;
		case 116: goto st54;
	}
	goto tr27;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
	if ( (*p) == 45 )
		goto st55;
	goto tr27;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	switch( (*p) ) {
		case 76: goto st56;
		case 77: goto st67;
		case 82: goto st166;
		case 108: goto st56;
		case 109: goto st67;
		case 114: goto st166;
	}
	goto tr27;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	switch( (*p) ) {
		case 69: goto st57;
		case 101: goto st57;
	}
	goto tr27;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	switch( (*p) ) {
		case 78: goto st58;
		case 110: goto st58;
	}
	goto tr27;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
	switch( (*p) ) {
		case 71: goto st59;
		case 103: goto st59;
	}
	goto tr27;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
	switch( (*p) ) {
		case 84: goto st60;
		case 116: goto st60;
	}
	goto tr27;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
	switch( (*p) ) {
		case 72: goto st61;
		case 104: goto st61;
	}
	goto tr27;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	if ( (*p) == 58 )
		goto st62;
	goto tr27;
st62:
	if ( ++p == pe )
		goto _test_eof62;
case 62:
	switch( (*p) ) {
		case 9: goto st62;
		case 13: goto st63;
		case 32: goto st62;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr79;
	goto tr77;
st63:
	if ( ++p == pe )
		goto _test_eof63;
case 63:
	if ( (*p) == 10 )
		goto tr80;
	goto tr27;
tr80:
#line 9 "http_common.rl"
	{ http->line_end = to_u16(p - buf); }
	goto st64;
st64:
	if ( ++p == pe )
		goto _test_eof64;
case 64:
#line 856 "http_parser.c"
	switch( (*p) ) {
		case 9: goto st65;
		case 32: goto st65;
	}
	goto tr27;
st65:
	if ( ++p == pe )
		goto _test_eof65;
case 65:
	switch( (*p) ) {
		case 9: goto st65;
		case 32: goto st65;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr79;
	goto tr77;
tr79:
#line 48 "http_parser.rl"
	{
			if (!length_incr(&http->content_len, (*p)))
				{p++; cs = 66; goto _out;}
		}
	goto st66;
st66:
	if ( ++p == pe )
		goto _test_eof66;
case 66:
#line 884 "http_parser.c"
	switch( (*p) ) {
		case 9: goto st40;
		case 13: goto st41;
		case 32: goto st40;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr79;
	goto tr77;
st67:
	if ( ++p == pe )
		goto _test_eof67;
case 67:
	switch( (*p) ) {
		case 68: goto st68;
		case 100: goto st68;
	}
	goto tr27;
st68:
	if ( ++p == pe )
		goto _test_eof68;
case 68:
	if ( (*p) == 53 )
		goto st69;
	goto tr27;
st69:
	if ( ++p == pe )
		goto _test_eof69;
case 69:
	if ( (*p) == 58 )
		goto st70;
	goto tr27;
st70:
	if ( ++p == pe )
		goto _test_eof70;
case 70:
	switch( (*p) ) {
		case 9: goto st70;
		case 13: goto st71;
		case 32: goto st70;
		case 43: goto tr87;
	}
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto tr87;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr87;
	} else
		goto tr87;
	goto tr85;
st71:
	if ( ++p == pe )
		goto _test_eof71;
case 71:
	if ( (*p) == 10 )
		goto tr88;
	goto tr27;
tr88:
#line 9 "http_common.rl"
	{ http->line_end = to_u16(p - buf); }
	goto st72;
st72:
	if ( ++p == pe )
		goto _test_eof72;
case 72:
#line 950 "http_parser.c"
	switch( (*p) ) {
		case 9: goto st73;
		case 32: goto st73;
	}
	goto tr27;
st73:
	if ( ++p == pe )
		goto _test_eof73;
case 73:
	switch( (*p) ) {
		case 9: goto st73;
		case 32: goto st73;
		case 43: goto tr87;
	}
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto tr87;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr87;
	} else
		goto tr87;
	goto tr85;
tr87:
#line 15 "http_common.rl"
	{ http->tmp_tip = to_u16(p - buf); }
	goto st74;
st74:
	if ( ++p == pe )
		goto _test_eof74;
case 74:
#line 982 "http_parser.c"
	if ( (*p) == 43 )
		goto st75;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st75;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st75;
	} else
		goto st75;
	goto tr85;
st75:
	if ( ++p == pe )
		goto _test_eof75;
case 75:
	if ( (*p) == 43 )
		goto st76;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st76;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st76;
	} else
		goto st76;
	goto tr85;
st76:
	if ( ++p == pe )
		goto _test_eof76;
case 76:
	if ( (*p) == 43 )
		goto st77;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st77;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st77;
	} else
		goto st77;
	goto tr85;
st77:
	if ( ++p == pe )
		goto _test_eof77;
case 77:
	if ( (*p) == 43 )
		goto st78;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st78;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st78;
	} else
		goto st78;
	goto tr85;
st78:
	if ( ++p == pe )
		goto _test_eof78;
case 78:
	if ( (*p) == 43 )
		goto st79;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st79;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st79;
	} else
		goto st79;
	goto tr85;
st79:
	if ( ++p == pe )
		goto _test_eof79;
case 79:
	if ( (*p) == 43 )
		goto st80;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st80;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st80;
	} else
		goto st80;
	goto tr85;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
	if ( (*p) == 43 )
		goto st81;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st81;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st81;
	} else
		goto st81;
	goto tr85;
st81:
	if ( ++p == pe )
		goto _test_eof81;
case 81:
	if ( (*p) == 43 )
		goto st82;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st82;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st82;
	} else
		goto st82;
	goto tr85;
st82:
	if ( ++p == pe )
		goto _test_eof82;
case 82:
	if ( (*p) == 43 )
		goto st83;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st83;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st83;
	} else
		goto st83;
	goto tr85;
st83:
	if ( ++p == pe )
		goto _test_eof83;
case 83:
	if ( (*p) == 43 )
		goto st84;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st84;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st84;
	} else
		goto st84;
	goto tr85;
st84:
	if ( ++p == pe )
		goto _test_eof84;
case 84:
	if ( (*p) == 43 )
		goto st85;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st85;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st85;
	} else
		goto st85;
	goto tr85;
st85:
	if ( ++p == pe )
		goto _test_eof85;
case 85:
	if ( (*p) == 43 )
		goto st86;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st86;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st86;
	} else
		goto st86;
	goto tr85;
st86:
	if ( ++p == pe )
		goto _test_eof86;
case 86:
	if ( (*p) == 43 )
		goto st87;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st87;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st87;
	} else
		goto st87;
	goto tr85;
st87:
	if ( ++p == pe )
		goto _test_eof87;
case 87:
	if ( (*p) == 43 )
		goto st88;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st88;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st88;
	} else
		goto st88;
	goto tr85;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
	if ( (*p) == 43 )
		goto st89;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st89;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st89;
	} else
		goto st89;
	goto tr85;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
	if ( (*p) == 43 )
		goto st90;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st90;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st90;
	} else
		goto st90;
	goto tr85;
st90:
	if ( ++p == pe )
		goto _test_eof90;
case 90:
	if ( (*p) == 43 )
		goto st91;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st91;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st91;
	} else
		goto st91;
	goto tr85;
st91:
	if ( ++p == pe )
		goto _test_eof91;
case 91:
	if ( (*p) == 43 )
		goto st92;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st92;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st92;
	} else
		goto st92;
	goto tr85;
st92:
	if ( ++p == pe )
		goto _test_eof92;
case 92:
	if ( (*p) == 43 )
		goto st93;
	if ( (*p) < 65 ) {
		if ( 47 <= (*p) && (*p) <= 57 )
			goto st93;
	} else if ( (*p) > 90 ) {
